# esp-homekit-devices

./: ._esp-homekit-devices.xcodeproj  .gitignore  .gitmodules  LICENSE  README.md
HAA/HAA_Main/main/: CMakeLists.txt  Makefile  extra_characteristics.h  header.h  ir_code.h  lightbulb_fx.c  lightbulb_fx.h  main.c  main.h  setup.c  setup.h  setup.html  setup.html.h  types.h
HAA/HAA_mgos32_Installer/main/: CMakeLists.txt  header.h  main.c  ota.c  ota.h  setup.c  setup.h  setup.html
external_libs/wolfssl/: CMakeLists.txt  component.mk  user_settings.h
external_libs/wolfssl/include/: FreeRTOS.h  semphr.h
external_libs/wolfssl/wolfssl-3.13.0-stable/: ChangeLog  Makefile.am  README  README.md  SCRIPTS-LIST  autogen.sh  configure.ac  pre-push.sh
external_libs/wolfssl/wolfssl-3.13.0-stable/certs/: ca-ecc-cert.der  ca-ecc-cert.pem  ca-ecc384-cert.der  ca-ecc384-cert.pem  client-ecc-cert.pem  gen_revoked.sh  include.am  server-ecc-comp.der  wolfssl-website-ca.pem
external_libs/wolfssl/wolfssl-3.13.0-stable/m4/: ax_harden_compiler_flags.m4  visibility.m4
external_libs/wolfssl/wolfssl-3.13.0-stable/mplabx/: test_main.c
external_libs/wolfssl/wolfssl-3.13.0-stable/scripts/: benchmark.test  external.test  ocsp-stapling-with-ca-as-responder.test  ocsp-stapling.test  ocsp-stapling2.test  ocsp.test  openssl.test  resume.test  sniffer-testsuite.test  tls-cert-fail.test  tls13.test
external_libs/wolfssl/wolfssl-3.13.0-stable/src/: crl.c  ocsp.c  sniffer.c  ssl.c  tls.c  tls13.c  wolfio.c
external_libs/wolfssl/wolfssl-3.13.0-stable/tests/: include.am  test-dtls.conf  test-qsh.conf  test-sig.conf  test-tls13-ecc.conf  test.conf
external_libs/wolfssl/wolfssl-3.13.0-stable/wolfssl/: certs_test.h  error-ssl.h  internal.h  ssl.h  test.h  wolfio.h
external_libs/wolfssl/wolfssl-3.15.0-stable/: .gitignore  Makefile.am  NEWS  NEWS.md  README  README.md  configure.ac
external_libs/wolfssl/wolfssl-3.15.0-stable/certs/: renewcerts.sh
external_libs/wolfssl/wolfssl-3.15.0-stable/doc/: generate_documentation.sh
external_libs/wolfssl/wolfssl-3.15.0-stable/mcapi/: mcapi_test.c
external_libs/wolfssl/wolfssl-3.15.0-stable/rpm/: spec.in
external_libs/wolfssl/wolfssl-3.15.0-stable/scripts/: include.am  ocsp-stapling.test  ocsp.test  openssl.test  psk.test  tls13.test  trusted_peer.test
external_libs/wolfssl/wolfssl-3.15.0-stable/src/: internal.c  ssl.c  tls.c  tls13.c
external_libs/wolfssl/wolfssl-3.15.0-stable/tests/: CONF_FILES_README.md  api.c  include.am  srp.c  suites.c  test-dtls.conf  test-ed25519.conf  test-fails.conf  test-psk-no-id.conf  test-psk.conf  test-qsh.conf  test-tls13-ecc.conf  test.conf
external_libs/wolfssl/wolfssl-3.15.0-stable/wolfssl/: internal.h  ssl.h  version.h
external_libs/wolfssl/wolfssl-3.15.3-stable/: .gitignore  ChangeLog.md  Makefile.am  README  README.md  SCRIPTS-LIST  async-check.sh  autogen.sh  configure.ac  fips-check.sh  wolfssl.vcxproj
libs/homekit-rsf/: CMakeLists.txt  Kconfig  LICENSE  Makefile.projbuild  README.md  component.mk
libs/homekit-rsf/include/homekit/: types.h  (+2 more)
libs/homekit-rsf/src/: accessories.c  base64.c  crypto.c  debug.c  debug.h  json.c  json.h  mdnsresponder.c  mdnsresponder.h  pairing.c  port.c  port.h  query_params.c  server.c  storage.c  storage.h  tlv.c
libs/homekit-rsf/tools/: gen_qrcode
(+2383 files in other folders)
